tests/ui/specialization/feature-gate-specialization.stderr
error[E0658]: specialization is experimental
  --> $DIR/feature-gate-specialization.rs:10:5
   |
LL |     default type Ty = ();
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: add `#![feature(specialization)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: specialization is experimental
  --> $DIR/feature-gate-specialization.rs:11:5
   |
LL |     default const CT: () = ();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: add `#![feature(specialization)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: specialization is experimental
  --> $DIR/feature-gate-specialization.rs:12:5
   |
LL |     default fn fn_(&self) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: add `#![feature(specialization)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
